--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
 
         <!-- Analytics Card: Smart Followers Growth -->
         <div class="analytics-card">
-            <div class="card-heading">Smart Followers Growth</div>
+            <div class="card-heading">verified Followers Growth</div>
             <div class="card-content">
                 <p>Increase in verified followers this month.</p>
                 <div class="card-metric">60%</div>
-                <div class="card-description">Current number of smart followers: 909.</div>
+                <div class="card-description">Current number of verified followers: 909.</div>
             </div>
         </div>
 
