--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             var loader = document.getElementById('tweet-loader');
             if(loader) loader.style.opacity = '0';
             setTimeout(function(){ if(loader) loader.style.display = 'none'; }, 600);
-        }, 2500);
+        }, 4000);
     </script>
     <!-- COVER PAGE -->
     <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 80vh;">
@@ -207,7 +207,7 @@
 
         <!-- Analytics Card: Smart Followers Growth -->
         <div class="analytics-card">
-            <div class="card-heading">verified Followers Growth</div>
+            <div class="card-heading">Verified Followers Growth</div>
             <div class="card-content">
                 <p>Increase in verified followers this month.</p>
                 <div class="card-metric">60%</div>
