--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     </script>
     <!-- COVER PAGE -->
     <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 80vh;">
-        <img src="frontcover.png" alt="Shift Monthly Analytics Report Cover" style="max-width: 350px; width: 100%; margin-bottom: 32px;" />
+        <img src="frontcover.jpg" alt="Shift Monthly Analytics Report Cover" style="max-width: 350px; width: 100%; margin-bottom: 32px;" />
     </div>
     <!-- END COVER PAGE -->
     <div class="analytics-container">
